--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -9,20 +9,22 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
+
 	<!-- Bootstrap Core CSS -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
     <!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
-	
-	<!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 	
 	<!--Javascript-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	
+	<!-- CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="images/favicon.png"/>
@@ -31,29 +33,24 @@
 
 <body>
 	<!-- Navigation -->
-	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar top-bar"></span>
-				<span class="icon-bar middle-bar"></span>
-				<span class="icon-bar bottom-bar"></span>
-			</button>
-			<a class="navbar-brand" href="index.html">elain.</a>
-		</div>
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="about.html"><div class="underline">About</div></a></li>
-				<li><a href="index.html#portfolio"><div class="underline">Work</div></a></li>
-				<li><a href="elain-tran-resume.pdf" class="menu" target="_blank"><div class="underline">Resume</div></a></li>
-			</ul>
+	<nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: white;">
+		<a class="navbar-brand" href="index.html">elain.</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav ml-auto">
+				<a href="about.html" class="nav-link menu"><div class="underline">About</div></a>
+				<a href="index.html#portfolio" class="nav-link menu"><div class="underline">Work</div></a>
+				<a href="elain-tran-resume.pdf" class="nav-link menu" target="_blank"><div class="underline">Resume</div></a>
+			</div>
 		</div>
 	</nav>
 	<!--End Navigation-->
 	
 	<!--Daily UI-->
-	<div class="container">
-		<section id="portfolio" class="container project-section">
+	<div class="section-container">
+		<section id="portfolio" class="project-section">
 			<img src="images/daily-ui-day-one2.png" class="category__image">
 			<div class="project-tag">
 				<div class="tag-list">
@@ -71,71 +68,65 @@
 					but I thoroughly enjoyed exploring new design styles, expanding my knowledge on programs, and getting a glimpse of how
 					to handle certain scenarios in the future.</p>
 				</div>
-				<!--<div class="tags">
-					<h5><b>Role</b></h5>
-					<h5>Visual Designer</h5>
-					<h5 style="margin-top: 15px;"><b>Timeline</b></h5>
-					<h5>August 2018 - Present</h5>
-					<h5 style="margin-top: 15px;"><b>Tools Used</b></h5>
-					<h5>Photoshop, Illustrator, Lunacy</p>
-				</div>-->
 			</div>
 			<div class="gallery">
-				<div class="row">
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-one.png" class="category__image" />
-							<figcaption>#001: Sign In</figcaption>
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-one.png" class="category__image" />
+								<figcaption>#001: Sign In</figcaption>
+							</div>
 						</div>
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-two.png" class="category__image" />
+								<figcaption>#002: Checkout</figcaption>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-three.png" class="category__image" />
+								<figcaption>#003: Landing Page</figcaption>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-four.png" class="category__image" />
+								<figcaption>#004: Calculator</figcaption>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-five.png" class="category__image" />
+								<figcaption>#005: App Icon</figcaption>
+							</div>
+						</div>	
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-six.png" class="category__image" />
+								<figcaption>#006: User Profile</figcaption>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-seven.png" class="category__image" />
+								<figcaption>#007: Settings</figcaption>
+							</div>
+						</div>			
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-eight.png" class="category__image" />
+								<figcaption>#008: 404 Page</figcaption>
+							</div>
+						</div>				
+						<div class="col-md-4">
+							<div class="gallery-item">
+								<img src="images/daily-ui-day-nine.png" class="category__image" />
+								<figcaption>#009: Music Player</figcaption>
+							</div>
+						</div>					
 					</div>
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-two.png" class="category__image" />
-							<figcaption>#002: Checkout</figcaption>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-three.png" class="category__image" />
-							<figcaption>#003: Landing Page</figcaption>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-four.png" class="category__image" />
-							<figcaption>#004: Calculator</figcaption>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-five.png" class="category__image" />
-							<figcaption>#005: App Icon</figcaption>
-						</div>
-					</div>	
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-six.png" class="category__image" />
-							<figcaption>#006: User Profile</figcaption>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-seven.png" class="category__image" />
-							<figcaption>#007: Settings</figcaption>
-						</div>
-					</div>			
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-eight.png" class="category__image" />
-							<figcaption>#008: 404 Page</figcaption>
-						</div>
-					</div>				
-					<div class="col-sm-4">
-						<div class="gallery-item">
-							<img src="images/daily-ui-day-nine.png" class="category__image" />
-							<figcaption>#009: Music Player</figcaption>
-						</div>
-					</div>					
 				</div>
 			</div>
 		</section>
@@ -144,7 +135,7 @@
 
 	<!--Social Icons-->
 	<footer>
-		<div class="container">
+		<div class="section-container">
 			<div class="social-media-bar">
 				<a href="mailto:elain.ttran@gmail.com"><i class="fa fa-envelope"></i></a> 
 				<a href="https://facebook.com/elainttran"><i class="fa fa-facebook"></i></a>  
