--- a/index.html
+++ b/index.html
@@ -11,56 +11,49 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<!-- Bootstrap Core CSS -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
     <!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+	
+	<!--Javascript-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	
-	<!--Javascript-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="images/favicon.png"/>
-
-	<!--Fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-
 
 </head>
 
 <body>
 	<!-- Navigation -->
-	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar top-bar"></span>
-				<span class="icon-bar middle-bar"></span>
-				<span class="icon-bar bottom-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#top">elain.</a>
-		</div>
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="about.html" class="menu"><div class="underline">About</div></a></li>
-				<li><a href="#portfolio" class="menu"><div class="underline">Work</div></a></li>
-				<li><a href="elain-tran-resume.pdf" class="menu" target="_blank"><div class="underline">Resume</div></a></li>
-			</ul>
+	<nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: white;">
+		<a class="navbar-brand" href="#top">elain.</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav ml-auto">
+				<a href="about.html" class="nav-link menu"><div class="underline">About</div></a>
+				<a href="#portfolio" class="nav-link menu"><div class="underline">Work</div></a>
+				<a href="elain-tran-resume.pdf" class="nav-link menu" target="_blank"><div class="underline">Resume</div></a>
+			</div>
 		</div>
 	</nav>
 	<!--End Navigation-->
 
 	<!--Splash Screen-->
-	<div class="container">
+	<div class="section-container">
 		<div class="inner-container" id="top">
 			<div class="splash">
-				<h5 class="basic-info">Elain Tran - Visual Designer & Web Developer</h5>
-				<h1 class="sub-info">Hello! I’m a self-taught visual designer and an aspiring front end developer
+				<h5>Elain Tran - Visual Designer & Web Developer</h5>
+				<h1>Hello! I’m a self-taught visual designer and an aspiring front end developer
 				based in Austin, Texas.</h1>
 				<div class="down">
 					<a href="#portfolio"><i class="fa fa-angle-down"></i></a>
@@ -70,74 +63,80 @@
 	</div>
     
 	<!--Portfolio-->
-    <div class="container">
-		<section id="portfolio" class="container portfolio-section">
+    <div class="section-container">
+		<section id="portfolio" class="portfolio-section">
 			<div class="tag-list">
 				<div class="index-tag active all-tag"><h6>All</h6></div>
 				<div class="index-tag code-tag"><h6>Code</h6></div>
 				<div class="index-tag design-tag"><h6>Design</h6></div>
 			</div>
 			<div class="gallery">
-				<div class="row">
-					<div class="columns">
-						<div class="col-sm-6 design">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-sm-6 code">
 							<div class="project project-item">
-								<img src="images/navilist.png" class="category__image" />
-								<figcaption>
-									<h3>NaviList</h3>
-									<h5>Visual Design</h5>
-								</figcaption>
-								<!--<a href="#"></a>-->
+								<img src="images/word-guess-game.png" class="category__image" />
+								<a href="word-guess-game.html">
+									<figcaption>
+										<h3>Word Guess Game</h3>
+										<h5>Web Development</h5>
+									</figcaption>
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/pomodoro-timer.png" class="category__image" />
-								<figcaption>
-									<h3>Pomodoro Timer</h3>
-									<h5>Web Development</h5>
-								</figcaption>
-								<a href="pomodoro-timer.html"></a>
+								<a href="pomodoro-timer.html">
+									<figcaption>
+										<h3>Pomodoro Timer</h3>
+										<h5>Web Development</h5>
+									</figcaption>
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/quote-machine.png" class="category__image" />
-								<figcaption>
-									<h3>Quote Generator</h3>
-									<h5>Web Development</h5>
-								</figcaption>
-								<a href="quote-generator.html"></a>
+								<a href="quote-generator.html">
+									<figcaption>
+										<h3>Quote Generator</h3>
+										<h5>Web Development</h5>
+									</figcaption>
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/wikipedia-viewer2.png" class="category__image" />
-								<figcaption>
-									<h3>Wikipedia Viewer</h3>
-									<h5>Web Development</h5>
-								</figcaption>
-								<a href="wikipedia-viewer.html"></a>
+								<a href="wikipedia-viewer.html">
+									<figcaption>
+										<h3>Wikipedia Viewer</h3>
+										<h5>Web Development</h5>
+									</figcaption>
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-6 code">
 							<div class="project project-item">
-								<img src="images/quicksand-photography.png" class="category__image"  />
-								<figcaption>
-									<h3>Quicksand Photography</h3>
-									<h5>Web Development</h5>
-								</figcaption>
-								<a href="quicksand-photography.html"></a>
+								<img src="images/quicksand-photography.png" class="category__image" />
+								<a href="quicksand-photography.html">
+									<figcaption>
+										<h3>Quicksand Photography</h3>
+										<h5>Web Development</h5>
+									</figcaption>
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-6 design">
 							<div class="project project-item category__image">
 								<img src="images/daily-ui-day-one2.png" class="category__image"  />
-								<figcaption>
-									<h3>Daily UI Challenge</h3>
-									<h5>Visual Design</h5>
-								</figcaption>
-								<a href="daily-ui-challenge.html"></a>
+								<a href="daily-ui-challenge.html">
+									<figcaption>
+										<h3>Daily UI Challenge</h3>
+										<h5>Visual Design</h5>
+									</figcaption>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -149,7 +148,7 @@
 	
 	<!--Social Icons-->
 	<footer>
-		<div class="container">
+		<div class="section-container">
 			<div class="social-media-bar">
 				<a href="mailto:elain.ttran@gmail.com"><i class="fa fa-envelope"></i></a> 
 				<a href="https://facebook.com/elainttran"><i class="fa fa-facebook"></i></a>  
