--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -4,25 +4,27 @@
 <title>Quicksand Photography</title>
     
 	<!-- Metadata -->
-    <meta charset="UTF-8">
-    <meta name="viewport"
+	<meta charset="UTF-8">
+	<meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 	<!-- Bootstrap Core CSS -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
     <!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
-	
-	<!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 	
 	<!--Javascript-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	
+	<!-- CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="images/favicon.png"/>
@@ -30,29 +32,24 @@
 </head>
 
 <body>
- 	<!-- Navigation -->
-	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar top-bar"></span>
-				<span class="icon-bar middle-bar"></span>
-				<span class="icon-bar bottom-bar"></span>
-			</button>
-			<a class="navbar-brand" href="index.html">elain.</a>
-		</div>
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="about.html"><div class="underline">About</div></a></li>
-				<li><a href="index.html#portfolio"><div class="underline">Work</div></a></li>
-				<li><a href="elain-tran-resume.pdf" target="_blank"><div class="underline">Resume</div></a></li>
-			</ul>
+	<!-- Navigation -->
+	<nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: white;">
+		<a class="navbar-brand" href="index.html">elain.</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav ml-auto">
+				<a href="about.html" class="nav-link menu"><div class="underline">About</div></a>
+				<a href="index.html#portfolio" class="nav-link menu"><div class="underline">Work</div></a>
+				<a href="elain-tran-resume.pdf" class="nav-link menu" target="_blank"><div class="underline">Resume</div></a>
+			</div>
 		</div>
 	</nav>
 	<!--End Navigation-->
 	
 	<!--Quicksand Photography-->
-	<div class="container">
+	<div class="section-container">
 		<section id="portfolio" class="container project-section">
 			<img src="images/quicksand-photography.png" class="category__image">
 			<div class="project-tag">
@@ -72,14 +69,6 @@
 					on minimalism and neutral tones, giving it a professional, sleek and modern look. This concept was
 					developed for <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-product-landing-page">one of freeCodeCamp’s responsive web design projects</a>.</p>
 				</div>
-				<!--<div class="tags">
-					<h5><b>Role</b></h5>
-					<h5>Front End Developer</h5>
-					<h5 style="margin-top: 15px;"><b>Languages</b></h5>
-					<h5>HTML, CSS, jQuery</h5>
-        			<h5 style="margin-top: 15px;"><b>Framework</b></h5>
-					<h5>Bootstrap</h5>
-				</div>-->
 			</div>
 			<div class="project-link">
 				<a href="https://elaintran.github.io/QuicksandPhotography" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
